--- a/README.rdoc
+++ b/README.rdoc
@@ -5,24 +5,14 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version : 2.2
+* Rails Version : 4.4
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Database Name : password_hash
+Steps : 
+1) Download Project
+2) Bundle install
+3) Configure database
+4) Migrate DB
+5) Start the rails server
+6) Run the project
