--- a/README.rdoc
+++ b/README.rdoc
@@ -10,9 +10,14 @@ Things you may want to cover:
 
 * Database Name : password_hash
 Steps : 
-1) Download Project <br>
-2) Bundle install <br>
+1) Download Project 
+
+2) Bundle install 
+
 3) Configure database
+
 4) Migrate DB
+
 5) Start the rails server
+
 6) Run the project
